@@ -1,5 +1,11 @@
 2008-01-27  Wakaba  <wakaba@suika.fam.cx>
 
+	* CSS-Parser-1.t: 'quotes' added.
+
+	* css-generated.dat: Test data for 'quotes' are added.
+
+2008-01-27  Wakaba  <wakaba@suika.fam.cx>
+
 	* CSS-Parser-1.t: 'overflow-x' and 'overflow-y' are added.
 
 	* css-visual.dat: New test data for 'overflow', 'overflow-x',
