@@ -1,5 +1,10 @@
 2008-01-27  Wakaba  <wakaba@suika.fam.cx>
 
+	* Parser.pm ($default_serializer): 'QUOTES' type supported.
+	('quotes'): Implemented.
+
+2008-01-27  Wakaba  <wakaba@suika.fam.cx>
+
 	* Parser.pm ($one_keyword_parser): More accurate error location
 	reporting.
 	('overflow-x', 'overflow-y'): Implemented.
